static/less/pages/courses.less
.find-courses {
    margin-top: @layout-top-spacing;
    background: none;

    header {
        display: none;
    }

    .container {
        .ionisx-container();
    }

    .courses {
        padding: 0;
        text-align: center;

        .courses-listing-item {
            width: 367px;
            float: none;
            margin: 0 15px 0 0;
            padding: 0;
            display: inline-block;

            &:last-child {
                margin: 0;
            }

            .course {
                box-shadow: none;
                background: none;
                border-radius: 0;
                background-color: @white;
                border: 1px solid @white;

                &:hover {
                    box-shadow: none;
                    border-color: @gg-blue;
                }

                .inner-wrapper {
                    border: 0 none;

                    .course-preview {
                        box-shadow: none;
                        border-bottom: 1px solid @gg-border-grey;
                        background: none;
                        background-color: fadeout(@white, 10%);

                        hgroup {
                            width: 100%;

                            h2 {
                                font-family: @font-family-sans-serif;
                                font-size: 14px;
                                font-weight: 600;
                                text-shadow: none;
                                color: @black;
                            }
                        }

                        .info-link {
                            display: none;
                        }

                        .course-number {
                            display: none;
                        }
                    }
                }

                .status {
                    display: none;
                }
            }
        }
    }
}

